--- a/views/join.ejs
+++ b/views/join.ejs
@@ -75,7 +75,7 @@
                                     <i class="input-icon fa fa-at"></i>
                                     <span>userId</span>
                                     <em>(required)</em>
-                            <input type="text" id="useseqnum" placeholder="useseqnum">
+                            <input type="text" id="userseqnum" placeholder="userseqnum">
                                 </div>       
                         <div class="input-style input-light has-icon input-style-1 input-required">
                             <i class="input-icon fa fa-lock font-11"></i>
@@ -263,7 +263,7 @@
                 password : $("#passwordInput").val(),
                 accessToken : $("#accessToken").val(),
                 refreshToken : $("#refreshToken").val(),
-                useseqnum : $("#useseqnum").val(),
+                userseqnum : $("#userseqnum").val(),
             },
             success:function(data){
                 alert(data);
