--- a/views/resultChild.ejs
+++ b/views/resultChild.ejs
@@ -2,14 +2,14 @@
     <body>
         <div id="accessToken"><%=data.access_token%></div>
         <div id="refreshToken"><%=data.refresh_token%></div>
-        <div id="useseqnum"><%=data.user_seq_no%></div>
+        <div id="userseqnum"><%=data.user_seq_no%></div>
     </body>
     <script>
         opener.document.getElementById("accessToken").value = 
         document.getElementById("accessToken").textContent;
         opener.document.getElementById("refreshToken").value = 
         document.getElementById("refreshToken").textContent;
-        opener.document.getElementById("useseqnum").value = 
-        document.getElementById("usenum").textContent;
+        opener.document.getElementById("userseqnum").value = 
+        document.getElementById("userseqnum").textContent;
     </script>
 </html> 
