--- a/views/main.ejs
+++ b/views/main.ejs
@@ -45,7 +45,7 @@
         '            <a href="#" class="back-button button button-xs button-round-huge bg-highlight">결제</a>\n' +
         '        </div>\n' +
         '        <div class="caption-center left-15 text-left">\n' +
-        '            <h1 class="color-white bolder">'+resultElement.account_alias+'</h1>\n' +
+        '            <h1 class="color-white bolder">'+resultElement.account_alias+'<div></div>'+resultElement.bank_name+'</h1>\n' +
         '            <p class="under-heading color-white opacity-90 bottom-0">\n' +
         '                ' + resultElement.fintech_use_num +
         '            </p>\n' +
